refactor: improve ota_example implementation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,9 @@
         "board/esp32-wrover-kit-3.3v.cfg"
     ],
     "idf.port": "/dev/ttyACM0",
-    "idf.toolsPath": "/home/nazareno/.espressif"
+    "idf.toolsPath": "/home/nazareno/.espressif",
+    "files.associations": {
+        "string.h": "c",
+        "esp32_mqtt.h": "c"
+    }
 }
