refactor(ota_example): added advanced example code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
     "files.associations": {
         "string.h": "c",
         "esp32_mqtt.h": "c"
-    }
+    },
+    "C_Cpp.errorSquiggles": "disabled"
 }
