--- a/examples/ota_example/main/CMakeLists.txt
+++ b/examples/ota_example/main/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRCS "main.c"
                        INCLUDE_DIRS "."
-                       REQUIRES esp32_mqtt)
+                       REQUIRES esp32_mqtt protocol_examples_common)
